--- a/Resources/localization/de.json
+++ b/Resources/localization/de.json
@@ -20,7 +20,7 @@
 	"Shipping address" : "Versandadresse",
 	"Payment method" : "Zalungsart",
 	"City" : "Stadt",
-	"State" : "Staat",
+	"State" : "Land",
 	"Street" : "Strasse",
 	"Zip" : "PLZ",
 	"To Confirm" : "Bestätigen",
