Translation for the Search Field implemented

--- a/Resources/localization/en.json
+++ b/Resources/localization/en.json
@@ -23,5 +23,6 @@
 	"To Confirm" : "To Confirm",
 	"Your order" : "Your order",
 	"Confirm": "Confirm",
-	"Your order will be shipped" : "Your order will be shipped"
+	"Your order will be shipped" : "Your order will be shipped",
+	"Search": "Search"
 }
