--- a/Resources/localization/fr.json
+++ b/Resources/localization/fr.json
@@ -26,5 +26,6 @@
 	"To Confirm" : "Confirmer",
 	"Your order" : "Votre commande",
 	"Confirm": "Confirmer",
-	"Your order will be shipped" : "Votre commande sera expédiée"
+	"Your order will be shipped" : "Votre commande sera expédiée",
+	"Search": "Cherche"
 }
