--- a/Resources/localization/de.json
+++ b/Resources/localization/de.json
@@ -26,5 +26,6 @@
 	"To Confirm" : "Bestätigen",
 	"Your order" : "Deine Bestellungen",
 	"Confirm": "Bestätigen",
-	"Your order will be shipped" : "Deine Bestellung wird bald versendet"
+	"Your order will be shipped" : "Deine Bestellung wird bald versendet",
+	"Search": "Suche"
 }
