--- a/Resources/localization/de.json
+++ b/Resources/localization/de.json
@@ -27,5 +27,6 @@
 	"Your order" : "Deine Bestellungen",
 	"Confirm": "Bestätigen",
 	"Your order will be shipped" : "Deine Bestellung wird bald versendet",
-	"Search": "Suche"
+	"Search": "Suche",
+	"Search result": "Suchergebnisse"
 }
