--- a/Resources/localization/en.json
+++ b/Resources/localization/en.json
@@ -24,5 +24,6 @@
 	"Your order" : "Your order",
 	"Confirm": "Confirm",
 	"Your order will be shipped" : "Your order will be shipped",
-	"Search": "Search"
+	"Search": "Search",
+	"Search result": "Search results"
 }
