--- a/Resources/localization/fr.json
+++ b/Resources/localization/fr.json
@@ -27,5 +27,6 @@
 	"Your order" : "Votre commande",
 	"Confirm": "Confirmer",
 	"Your order will be shipped" : "Votre commande sera expédiée",
-	"Search": "Cherche"
+	"Search": "Cherche",
+	"Search result": "Cherche"
 }
