--- a/Resources/localization/fr.json
+++ b/Resources/localization/fr.json
@@ -28,5 +28,11 @@
 	"Confirm": "Confirmer",
 	"Your order will be shipped" : "Votre commande sera expédiée",
 	"Search": "Cherche",
-	"Search result": "Cherche"
+	"Search result": "Cherche",
+	"Product Name": "Produit Nombre",
+	"Description": "Description",
+	"Price": "Price",
+	"Brand ID": "Brand ID",
+	"Category ID": "Category ID",
+	"Image": "Image"
 }
