Product Translation correction

--- a/Resources/localization/de.json
+++ b/Resources/localization/de.json
@@ -30,7 +30,9 @@
 	"Search": "Suche",
 	"Search result": "Suchergebnisse",
 	"Product Name": "Produkt Name",
-	"Description": "Beschreibung",
+	"Description EN": "Beschreibung EN",
+	"Description DE": "Beschreibung DE",
+	"Description FR": "Beschreibung FR",
 	"Price": "Preis",
 	"Brand ID": "Marke ID",
 	"Category ID": "Kategorie ID",
