--- a/Resources/localization/en.json
+++ b/Resources/localization/en.json
@@ -27,7 +27,9 @@
 	"Search": "Search",
 	"Search result": "Search results",
 	"Product Name": "Product Name",
-	"Description": "Description",
+	"Description EN": "Description EN",
+	"Description DE": "Description DE",
+	"Description FR": "Description FR",
 	"Price": "Price",
 	"Brand ID": "Brand ID",
 	"Category ID": "Category ID",
