Translation extended for Admin Handling

--- a/Resources/localization/de.json
+++ b/Resources/localization/de.json
@@ -29,6 +29,12 @@
 	"Your order will be shipped" : "Deine Bestellung wird bald versendet",
 	"Search": "Suche",
 	"Search result": "Suchergebnisse",
+	"Add Product": "Produkt hinfügen",
+	"Remove Product": "Produkt entfernen",
+	"Add Category": "Kategorie hinfügen",
+	"Remove Category": "Kategorie entfernen",
+	"Add User": "User hinfügen",
+	"Remove User": "User entfernen",
 	"Product Name": "Produkt Name",
 	"Description EN": "Beschreibung EN",
 	"Description DE": "Beschreibung DE",
