--- a/Resources/localization/en.json
+++ b/Resources/localization/en.json
@@ -26,6 +26,12 @@
 	"Your order will be shipped" : "Your order will be shipped",
 	"Search": "Search",
 	"Search result": "Search results",
+	"Add Product": "Add Product",
+	"Remove Product": "Remove Product",
+	"Add Category": "Add Category",
+	"Remove Category": "Remove Category",
+	"Add User": "Add User",
+	"Remove User": "Remove User",
 	"Product Name": "Product Name",
 	"Description EN": "Description EN",
 	"Description DE": "Description DE",
