--- a/Resources/localization/fr.json
+++ b/Resources/localization/fr.json
@@ -29,6 +29,12 @@
 	"Your order will be shipped" : "Votre commande sera expédiée",
 	"Search": "Cherche",
 	"Search result": "Cherche",
+	"Add Product": "Produit Insertion",
+	"Remove Product": "Produit enlever",
+	"Add Category": "Catégorie Insertion",
+	"Remove Category": "Catégorie enlever",
+	"Add User": "User Insertion",
+	"Remove User": "User enlever",
 	"Product Name": "Produit Nombre",
 	"Description EN": "Description EN",
 	"Description DE": "Description DE",
