--- a/Resources/localization/de.json
+++ b/Resources/localization/de.json
@@ -1,7 +1,7 @@
 {
 	"Contact": "Kontakt",
 	"Sign In": "Einloggen",
-	"Sign Up": "Anmelden",
+	"Sign Up": "Registrieren",
 	"Sign Out": "Ausloggen",
 	"Email": "Email",
 	"Password": "Passwort",
