hinfügen in hinzufügen geändert

--- a/Resources/localization/de.json
+++ b/Resources/localization/de.json
@@ -29,7 +29,7 @@
 	"Your order will be shipped" : "Deine Bestellung wird bald versendet",
 	"Search": "Suche",
 	"Search result": "Suchergebnisse",
-	"Add Product": "Produkt hinfügen",
+	"Add Product": "Produkt hinzufügen",
 	"Remove Product": "Produkt entfernen",
 	"Add Category": "Kategorie hinfügen",
 	"Remove Category": "Kategorie entfernen",
