Dropdown liste hinzugefügt mit übersetzungen

--- a/Resources/localization/de.json
+++ b/Resources/localization/de.json
@@ -40,10 +40,17 @@
 	"Description DE": "Beschreibung DE",
 	"Description FR": "Beschreibung FR",
 	"Price": "Preis",
-	"Brand ID": "Marke ID",
-	"Category ID": "Kategorie ID",
+	"Brand ID": "Marke wählen",
+	"Category ID": "Kategorie wählen",
 	"Image": "Bild",
 	"Category Name EN": "Kategorie Name EN",
 	"Category Name DE": "Kategorie Name DE",
-	"Category Name FR": "Kategorie Name FN"
+	"Category Name FR": "Kategorie Name FN",
+	"PC":"Einzelplatzrechner",
+	"Server":"Server",
+	"Peripherie":"Peripherie",
+	"Components":"Komponente",
+	"Software":"Computerprogramme",
+	"Notebooks":"Laptop",
+	"Workstation":"Arbeitsstation"
 }
