AddUser: choice of admin or user bound to the DB

--- a/Resources/localization/de.json
+++ b/Resources/localization/de.json
@@ -52,5 +52,6 @@
 	"Components":"Komponente",
 	"Software":"Computerprogramme",
 	"Notebooks":"Laptop",
-	"Workstation":"Arbeitsstation"
+	"Workstation":"Arbeitsstation",
+	"Role":"Role auswählen"
 }
