--- a/Resources/localization/fr.json
+++ b/Resources/localization/fr.json
@@ -27,8 +27,8 @@
 	"Your order" : "Votre commande",
 	"Confirm": "Confirmer",
 	"Your order will be shipped" : "Votre commande sera expédiée",
-	"Search": "Cherche",
-	"Search result": "Cherche",
+	"Search": "Chercher",
+	"Search result": "Chercher",
 	"Add Product": "Produit Insertion",
 	"Remove Product": "Produit enlever",
 	"Add Category": "Catégorie Insertion",
